force-app/main/default/objects/NEOS_Matter__c/fields/Settlement_LSS_Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Settlement_LSS_Paralegal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement LSS/Paralegal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NEOS_Matters6</relationshipName>
    <type>Lookup</type>
</CustomField>