force-app/main/default/objects/NEOS_Matter__c/fields/Settlement_Senior_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Senior_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Senior Attorney</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Senior Counsel</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Managing Attorney</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>NEOS_Matters3</relationshipName>
    <type>Lookup</type>
</CustomField>