force-app/main/default/objects/NEOS_Matter__c/fields/Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mediator&apos;s Proposal Accepted</fullName>
            </value>
            <value>
                <fullName>Drafting MOU</fullName>
            </value>
            <value>
                <fullName>MOU Signatures Pending</fullName>
            </value>
            <value>
                <fullName>MOU Fully Signed</fullName>
            </value>
            <value>
                <fullName>Drafting SA</fullName>
            </value>
            <value>
                <fullName>SA Signatures Pending</fullName>
            </value>
            <value>
                <fullName>SA Signatures Pending &amp; Drafting MPA</fullName>
            </value>
            <value>
                <fullName>SA Fully Signed</fullName>
            </value>
            <value>
                <fullName>Drafting MPA</fullName>
            </value>
            <value>
                <fullName>MPA Filed / Pending Hearing</fullName>
            </value>
            <value>
                <fullName>MPA Granted</fullName>
            </value>
            <value>
                <fullName>PA Order Signed</fullName>
            </value>
            <value>
                <fullName>Drafting MFA</fullName>
            </value>
            <value>
                <fullName>MFA Filed / Pending Hearing</fullName>
            </value>
            <value>
                <fullName>MFA Granted / Pending Signed Order</fullName>
            </value>
            <value>
                <fullName>FA Order &amp; Judgment Signed</fullName>
            </value>
            <value>
                <fullName>Sent Order &amp; Judgment to Admin</fullName>
            </value>
            <value>
                <fullName>Distribution Scheduled by Admin</fullName>
            </value>
            <value>
                <fullName>Funded to Admin</fullName>
            </value>
            <value>
                <fullName>Fees/Costs Rec’d by D.Law</fullName>
            </value>
            <value>
                <fullName>Distribution Done &amp; Pending Compliance Hearing</fullName>
            </value>
            <value>
                <fullName>Compliance Hearing Completed</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>