force-app/main/default/objects/NEOS_Matter__c/fields/SettlementAgreementSigned__c.field-meta.xml
<CustomField>
    <fullName>SettlementAgreementSigned__c</fullName>
    <label>Settlement Agreement Signed</label>
    <type>Date</type>
</CustomField>