force-app/main/default/objects/NEOS_Matter__c/fields/SettlementAmount__c.field-meta.xml
<CustomField>
    <fullName>SettlementAmount__c</fullName>
    <label>Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>