force-app/main/default/objects/NEOS_Matter__c/fields/SOL_Close__c.field-meta.xml
<CustomField>
    <fullName>SOL_Close__c</fullName>
    <formula>AND(
SOL_Date__c &gt;= TODAY(),
SOL_Date__c &lt;= TODAY() + 90
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>W&amp;H SOL Close</label>
    <type>Checkbox</type>
</CustomField>