force-app/main/default/objects/NEOS_Matter__c/fields/SOL_Countdown__c.field-meta.xml
<CustomField>
    <fullName>SOL_Countdown__c</fullName>
    <formula>IF( ( SOL_Date__c  - TODAY()) = 1

, &quot;1 Day Until W&amp;H SOL Expires&quot;

, TEXT( SOL_Date__c - TODAY() ) &amp; &quot; Days until W&amp;H SOL Expires&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>W&amp;H SOL Countdown</label>
    <type>Text</type>
</CustomField>