force-app/main/default/objects/NEOS_Matter__c/fields/SOL_Date__c.field-meta.xml
<CustomField>
    <fullName>SOL_Date__c</fullName>
    <label>W&amp;H SOL Date</label>
    <type>Date</type>
</CustomField>