force-app/main/default/objects/NEOS_Matter__c/fields/SOL_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>SOL_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W&amp;H SOL Satisfied?</label>
    <type>Checkbox</type>
</CustomField>