force-app/main/default/objects/NEOS_Matter__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Signed</fullName>
                <default>true</default>
                <label>Client Signed</label>
            </value>
            <value>
                <fullName>Administrative Remedies</fullName>
            </value>
            <value>
                <fullName>Complaint Filed</fullName>
            </value>
            <value>
                <fullName>At Issue</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>