force-app/main/default/objects/NEOS_Matter__c/fields/State_Docket__c.field-meta.xml
<CustomField>
    <fullName>State_Docket__c</fullName>
    <label>State Docket #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>