force-app/main/default/objects/NEOS_Matter__c/fields/State_Judge__c.field-meta.xml
<CustomField>
    <fullName>State_Judge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Judge</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.Role__c</field>
            <operation>equals</operation>
            <value>Judge</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipName>TREO_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>