force-app/main/default/objects/NEOS_Matter__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Theories of Liabilities</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>