force-app/main/default/objects/NEOS_Matter__c/fields/TotalNumberOfAggrievedEmployees__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfAggrievedEmployees__c</fullName>
    <label>Total Number of Aggrieved Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>