force-app/main/default/objects/NEOS_Matter__c/fields/TotalNumberOfClassMembers__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfClassMembers__c</fullName>
    <label>Total Number of Class Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>