force-app/main/default/objects/NEOS_Matter__c/fields/TotalPAGAPenalties__c.field-meta.xml
<CustomField>
    <fullName>TotalPAGAPenalties__c</fullName>
    <label>Total PAGA Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>