force-app/main/default/objects/NEOS_Matter__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <label>Trial</label>
    <type>Date</type>
</CustomField>