force-app/main/default/objects/NEOS_Matter__c/fields/WitnessExhibit__c.field-meta.xml
<CustomField>
    <fullName>WitnessExhibit__c</fullName>
    <label>Witness/Exhibit</label>
    <type>Date</type>
</CustomField>