force-app/main/default/objects/NEOS_Matter__c/recordTypes/Appeal.recordType-meta.xml
<RecordType>
    <fullName>Appeal</fullName>
    <active>true</active>
    <label>Appeal</label>
</RecordType>