force-app/main/default/objects/NEOS_Matter__c/recordTypes/Arbitration.recordType-meta.xml
<RecordType>
    <fullName>Arbitration</fullName>
    <active>false</active>
    <label>Arbitration</label>
</RecordType>