force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_Class_Action.recordType-meta.xml
<RecordType>
    <fullName>D_Law_Class_Action</fullName>
    <active>true</active>
    <label>D.Law Class Action</label>
</RecordType>