force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_Class_Only.recordType-meta.xml
<RecordType>
    <fullName>D_Law_Class_Only</fullName>
    <active>false</active>
    <label>D.Law Class Only</label>
</RecordType>