force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_Class_PAGA.recordType-meta.xml
<RecordType>
    <fullName>D_Law_Class_PAGA</fullName>
    <active>true</active>
    <label>D.Law Class + PAGA</label>
</RecordType>