force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_FEHA_StandAlone.recordType-meta.xml
<RecordType>
    <fullName>D_Law_FEHA_StandAlone</fullName>
    <active>true</active>
    <label>D.Law FEHA Stand-Alone</label>
</RecordType>