force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_Individual_Wage_Hour.recordType-meta.xml
<RecordType>
    <fullName>D_Law_Individual_Wage_Hour</fullName>
    <active>true</active>
    <label>D.Law Individual Wage &amp; Hour</label>
</RecordType>