force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_PAGA_Only.recordType-meta.xml
<RecordType>
    <fullName>D_Law_PAGA_Only</fullName>
    <active>true</active>
    <label>D.Law PAGA Stand-Alone</label>
</RecordType>