force-app/main/default/objects/NEOS_Matter__c/recordTypes/D_Law_PAGA_Tag_Along.recordType-meta.xml
<RecordType>
    <fullName>D_Law_PAGA_Tag_Along</fullName>
    <active>true</active>
    <label>D.Law PAGA Tag-Along</label>
</RecordType>