force-app/main/default/objects/NEOS_Matter__c/recordTypes/Topfiling_JPA.recordType-meta.xml
<RecordType>
    <fullName>Topfiling_JPA</fullName>
    <active>false</active>
    <label>Topfiling/JPA</label>
</RecordType>