force-app/main/default/objects/NEOS_Matter__c/validationRules/Closed_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Validation</fullName>
    <active>true</active>
    <description>Raise an Error Message when user is trying to save a matter record with a Closed Date earlier than Opened Date</description>
    <errorConditionFormula>ClosedDate__c &lt;  Opened__c</errorConditionFormula>
    <errorDisplayField>ClosedDate__c</errorDisplayField>
    <errorMessage>Closed Date can not be earlier than Opened Date</errorMessage>
</ValidationRule>