force-app/main/default/objects/NEOS_Matter__c/validationRules/Senior_Attorney_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Senior_Attorney_Validation</fullName>
    <active>false</active>
    <description>Raise this error when users try to save a Matter record without a senior attorney value</description>
    <errorConditionFormula>ISBLANK( Senior_Attorney__c )</errorConditionFormula>
    <errorDisplayField>Senior_Attorney__c</errorDisplayField>
    <errorMessage>Senior Attorney can not be blank</errorMessage>
</ValidationRule>