force-app/main/default/objects/NEOS_Matter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Senior_Attorney__c</columns>
    <columns>Associate_Attorney__c</columns>
    <columns>LSS_Paralegal__c</columns>
    <columns>CourtJurisdiction__c</columns>
    <columns>Stage__c</columns>
    <columns>Settlement_Senior_Attorney__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>