force-app/main/default/objects/NEOS_Matter__c/listViews/All_Closed_Matters.listView-meta.xml
<ListView>
    <fullName>All_Closed_Matters</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Senior_Attorney__c</columns>
    <columns>Associate_Attorney__c</columns>
    <columns>Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsClosed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Closed Matters</label>
</ListView>