force-app/main/default/objects/NEOS_Matter__c/listViews/All_Open_Matters.listView-meta.xml
<ListView>
    <fullName>All_Open_Matters</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Senior_Attorney__c</columns>
    <columns>Associate_Attorney__c</columns>
    <columns>CourtJurisdiction__c</columns>
    <columns>Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Open Matters</label>
</ListView>