force-app/main/default/objects/NEOS_Matter__c/listViews/Other.listView-meta.xml
<ListView>
    <fullName>Other</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Senior_Attorney__c</columns>
    <columns>Associate_Attorney__c</columns>
    <columns>CourtJurisdiction__c</columns>
    <columns>Stage__c</columns>
    <columns>SOL_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NEOS_Matter__c.Other</value>
    </filters>
    <label>Other</label>
</ListView>